05-serving-single-model/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-serve
spec:
  type: ClusterIP
  selector:
    app: iris-serve
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
