05-serving-single-model/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-serve
spec:
  rules:
  - host: serve.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iris-serve
            port:
              number: 80
